LAB ACT 2 (FINISHED)

--- a/ManaogMachProb1/ManaogMachProb1/ManaogMachProb1.csproj
+++ b/ManaogMachProb1/ManaogMachProb1/ManaogMachProb1.csproj
@@ -10,4 +10,10 @@
     <Compile Remove="Controllers\StudenControllercs.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Remove="Views\Instructor\Edit.cshtml" />
+    <Content Remove="Views\Student\AddStudent.razor" />
+    <Content Remove="Views\Student\Edit.cshtml" />
+  </ItemGroup>
+
 </Project>
