--- a/ManaogMachProb1/ManaogMachProb1/ManaogMachProb1.csproj
+++ b/ManaogMachProb1/ManaogMachProb1/ManaogMachProb1.csproj
@@ -7,13 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\NewFolder\**" />
+    <Content Remove="Views\NewFolder\**" />
+    <EmbeddedResource Remove="Views\NewFolder\**" />
+    <None Remove="Views\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\Register.cs" />
     <Compile Remove="Controllers\StudenControllercs.cs" />
+    <Compile Remove="Views\Class.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Remove="Views\Instructor\Edit.cshtml" />
     <Content Remove="Views\Student\AddStudent.razor" />
     <Content Remove="Views\Student\Edit.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.24" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.24" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
   </ItemGroup>
 
 </Project>
