--- a/ManaogMachProb1/ManaogMachProb1/appsettings.json
+++ b/ManaogMachProb1/ManaogMachProb1/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = RAIJU\\SQLEXPRESS;Database= aspDB; Trusted_connection = True; Encrypt = False"
+  }
 }
